test/fail/integration/_fail_grammar_decl_type_1.hs
x, y ::
main = print "hello"